# blacklist

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  blacklist.py  donotcommit.py  setup.cfg
tests/: blacklist_test.py
