[metadata]
name = blacklist
version = 0.0.1
description = Block comitting of atrings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ahonnecke/blacklist
author = Ashton Honnecke
author_email = ahonnecke@pixelstub.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6

[options]
py_modules = blacklist
install_requires =
    flake8>=3.7
    tokenize-rt>=2.1
python_requires = >=3.6

[options.entry_points]
console_scripts =
    blacklist = blacklist:main

[bdist_wheel]
universal = True
